--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="contact-list mb-30">
                         <h4>Phone Number</h4>
                         <p>+8801 780 775 601</p>
-                        <p>+8801 755 331 834</p>
+                        <p>+8801 567 951 020</p>
                     </div>
                     <div class="contact-list mb-30">
                         <h4>Email Address</h4>
@@ -166,7 +166,7 @@
                                 <p>I am currently studying in the Department of Computer Technology, Faripur Polytechnic Institute. & CSE.
                                 </p>
                                 <p>
-                                    Working gives me a lot of skills and experience that I believe make me best suited for the job position that is being offered with a position of Web Devloper.
+                                    Working gives me a lot of skills and experience that I believe make me best suited for the job position that is being offered with a position of Web Devloper.  Branch Manager Cumilla (Muradnagar) Metanghar Hub (Steadfast Courier LTD)
                                 </p>
                                 <p>
                                 Hobbies and likes My favorite game is cricket and tennis. Dear Sportsman Mashrafe Bin Mortaza and Cristiano Ronaldo . Hummus rain shower . Preferred food cattle and poles.</p>
